tests/NormalTests/paczka1/small_fuzzy/82907084.err
Error in line 4: g9hX4h50g9u A822 4,3
Error in line 13: g9hX4h50g9u S261 81,65
